--- a/DemoOpenGLBasicsCS.csproj
+++ b/DemoOpenGLBasicsCS.csproj
@@ -88,6 +88,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="TKran.cs" />
     <Compile Include="TView.cs">
       <SubType>Component</SubType>
     </Compile>
